Disciplie & update profile api added
